--- a/docs/hpc/01_getting_started/02_getting_and_renewing_an_account.mdx
+++ b/docs/hpc/01_getting_started/02_getting_and_renewing_an_account.mdx
@@ -64,7 +64,7 @@ HPC faculty sponsors are expected to:
 
 -   Respond promptly to account-related requests from HPC staff
 
-Each year, your sponsored users must renew their account. You will need to approve the renewal by logging into the [NYU Identity Management service][nyu ims link]. We have a [walkthrogh of the approval process here](04_walkthrough_approve_hpc_account_request.md)
+Each year, your sponsored users must renew their account. You will need to approve the renewal by logging into the [NYU Identity Management service][nyu ims link]. We have a [walkthrough of the approval process here](04_walkthrough_approve_hpc_account_request.md)
 
 ## Bulk HPC Accounts for Courses
 
