--- a/docs/hpc/09_ood/04_Desktop.mdx
+++ b/docs/hpc/09_ood/04_Desktop.mdx
@@ -3,7 +3,7 @@
 You can get a basic desktop interface to HPC resources.
 
 ## Getting Started
-You can get a desktop in OOD by going to the URL [ood.hpc.nyu.edu](http://ood.hpc.nyu.edu) in your browser and selecting `Desktop` from the `Interactive Apps` pull-down menu at the top of the page.  Once you've used it and other interactive apps they'll show up on your home screen under the `Recently Used Apps` header.
+You can get a desktop in OOD by going to the URL [ood.torch.hpc.nyu.edu](http://ood.torch.hpc.nyu.edu) in your browser and selecting `Desktop` from the `Interactive Apps` pull-down menu at the top of the page.  Once you've used it and other interactive apps they'll show up on your home screen under the `Recently Used Apps` header.
 
 :::note
 Be aware that when you start from `Recently Used Apps` it will start with the same configuration that you used previously.  If you'd like to configure your Desktop session differently, you'll need to select it from the menu.
