added missing jupyter hub link

--- a/docs/hpc/01_getting_started/02_getting_and_renewing_an_account.mdx
+++ b/docs/hpc/01_getting_started/02_getting_and_renewing_an_account.mdx
@@ -70,7 +70,7 @@ Each year, your sponsored users must renew their account. You will need to appro
 
 HPC bulk accounts request is disabled for HPC sponsors.
 
--   If you would like to use JupyterHub for your classes, please don't submit the form below, read \[Jupyter Hub page]**TODO Add a page for JHub in the Cloud section** instead (the link to an intake form is also there)
+-   If you would like to use JupyterHub for your classes, please don't submit the form below, read the [Jupyter Hub section of the Instructional Tools for Coding Page](https://www.nyu.edu/life/information-technology/teaching-and-learning-services/instructional-tools/instructional-tools-for-coding.html?challenge=d06e90d7-4d8f-4b88-9d8c-10b73beb60f1) instead (the link to an intake form is also there)
 
 -   Please fill out this [request form][hpc account request form link for courses] for the course, we'll create HPC accounts for the class per request
 :::note
