--- a/docs/hpc/01_getting_started/07_hpc_project_management_portal.mdx
+++ b/docs/hpc/01_getting_started/07_hpc_project_management_portal.mdx
@@ -7,7 +7,7 @@ import TabItem from '@theme/TabItem';
 This section is only applicable to the Torch cluster. An active allocation is necessary to sumbmit jobs on Torch.
 :::
 
-The HPC project and allocation management portal for Torch can access it by navigating to [projects.hpc.nyu.edu](https://projects.hpc.nyu.edu). With it you can:
+The HPC project and allocation management portal for Torch can be accessed by navigating to [projects.hpc.nyu.edu](https://projects.hpc.nyu.edu). With it you can:
 <Tabs>
   <TabItem value="PIs" label="PIs" default>
     -   Create a project
