changed quota to match text

--- a/docs/hpc/03_storage/05_best_practices.mdx
+++ b/docs/hpc/03_storage/05_best_practices.mdx
@@ -17,9 +17,10 @@ Hostname: torch-login-2 at 2025-12-09 17:18:24
 Filesystem   Environment       Backed up?   Allocation           Current Usage
 Space        Variable          /Flushed?    Space / Files        Space(%) / Files(%)
 
-/home        $HOME             YES/NO       0.05TB/0.03M         0.0TB(0.0%)/54(0%)
+/home        $HOME             YES/NO       0.05TB/0.03M         0.025TB(50.0%)/0.033M(110%)
 /scratch     $SCRATCH          NO/YES       5.0TB/5.0M           0.0TB(0.0%)/1(0%)
 /archive     $ARCHIVE          YES/NO       2.0TB/0.02M          0.0TB(0.0%)/1(0%)
+
 ```
 You can use the following command to print the list of files within each sub-folder for a given directory:
 ```sh
