since users always forget this

--- a/docs/hpc/09_ood/01_ood_intro.mdx
+++ b/docs/hpc/09_ood/01_ood_intro.mdx
@@ -28,6 +28,10 @@ GUI based applications are accessible without the need for port or X11 forwardin
 
 ## Troubleshooting
 
+:::warning[VPN necessary to access OOD]
+You must be on the NYU VPN to be able to access the Open On Demand gateway! For instructions on setting up NYU VPN, please see [this page](https://www.nyu.edu/life/information-technology/infrastructure/network-services/vpn.html).
+:::
+
 ### Connections to Open OnDemand
 
 A common issue that can occur is receiving an error that the Open OnDemand page cannot be reached. Sometimes this can indicate that the service is down, but often this is an issue with the the local browser cache. You can test this by opening a private browser window and seeing if https://ood.torch.hpc.nyu.edu will load. If it does, try deleting the cache for https://ood.torch.hpc.nyu.edu in your browser history to resolve this issue.
