--- a/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
+++ b/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
@@ -7,7 +7,7 @@ This page gives an overview of connecting to the HPC cluster, for a tutorial on 
 There are several ways to interact with the Torch HPC cluster. Similar to other Linux clusters, the most common method of connection is via a Command Line Interface (CLI). A CLI is a program that allows you to create and delete files, run programs, and navigate through directories and files via a typed prompt. On Mac, the built-in CLI application is called Terminal. While Windows 11 machines support a Linux Subsystem, which allows for similar functionality, a popular tool used to connect to a Linux server is a free application called [MoabXterm](https://mobaxterm.mobatek.net/documentation.html) 
 
 :::tip
-If you'd prefer to access the HPC cluster via a web gateway instead, please refer to [the section describing Open OnDemand (OOD)](../09_ood/01_ood_intro.md).
+If you'd prefer to access the HPC cluster via a web gateway instead, please refer to [the section describing Open OnDemand (OOD)](../09_ood/01_ood_intro.mdx).
 :::
 
 The following sections will outline basic ways to connect to the Torch cluster. Access to the clusters is primarily handled via the Secure Shell Protocol, or ssh. Below we outline ways to connect via ssh on Mac, Linux, and Windows machines.
