add description for Chemistry resource
	modified:   docs/hpc/01_getting_started/09_requesting_an_allocation.mdx

--- a/docs/hpc/01_getting_started/09_requesting_an_allocation.mdx
+++ b/docs/hpc/01_getting_started/09_requesting_an_allocation.mdx
@@ -24,7 +24,7 @@ After clicking "+Request Resource Allocation", you'll see a list of resources yo
 
 :::info Available resource for each school:
 <Tabs>
-  <TabItem value="tandon" label="Tandon" default>
+  <TabItem value="tandon" label="Tandon">
     -   **tandon_advanced**: includes both A100, H100 and H200 GPUs
     -   **tandon_priority**: includes A100 and H100 GPUs
   </TabItem>
@@ -37,6 +37,9 @@ After clicking "+Request Resource Allocation", you'll see a list of resources yo
     -   **cilvr**: A100 GPUs    
     -   **cds**: rtx8000, A100 and H200 GPUs
     -   **mren**: stakeholder L40s GPUs    
+  </TabItem>
+  <TabItem value="artscience" label="Arts & Science">
+    -   **chemistry**: A100 GPUs for use by Chemistry Simmons Center PIs
   </TabItem>
 </Tabs>
 :::
