--- a/docs/hpc/01_getting_started/01_intro.mdx
+++ b/docs/hpc/01_getting_started/01_intro.mdx
@@ -5,5 +5,4 @@ Welcome to the Torch HPC documentation! If you do not have an HPC account, pleas
 If you are an active user, you can proceed to one of the categories on the left.
 
 ## Announcements
-
-<iframe src="https://docs.google.com/presentation/d/e/16ngaLYw236Zr1fI8oPirK6Qz6EEDnpdhtRiJ3sCgEz8/edit?slide=id.g1895eda81ef_0_0#slide=id.g1895eda81ef_0_0/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSG9zZs-t9SEUZTsHxzsSGO7Y_seexmJZpDYudAuOWSBvRf1HYN_RSEzqJolniKjWvm4AtgpeNKbVYx/pubembed?start=true&loop=true&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
