ood url correction

--- a/docs/hpc/12_tutorial_intro_shell_hpc/02_connecting_to_hpc.mdx
+++ b/docs/hpc/12_tutorial_intro_shell_hpc/02_connecting_to_hpc.mdx
@@ -115,7 +115,7 @@ Features Include:
 
 OOD is accessible to all users with a valid NYU HPC account while on-campus network or through a VPN.
 
-To access OOD visit: [https://ood.hpc.nyu.edu](https://ood.hpc.nyu.edu) (VPN Required)
+To access OOD visit: [https://ood.torch.hpc.nyu.edu](https://ood.torch.hpc.nyu.edu) (VPN Required)
 
 ### Access the Shell
 Under the clusters menu you can select the Torch Shell Access option to access the Linux shell. No local SSH client is required.
@@ -124,15 +124,15 @@ Under the clusters menu you can select the Torch Shell Access option to access t
 GUI based applications are accessible without the need for port or X11 forwarding. Select the Interactive Apps menu, select the desired application, and submit the job based on required resources and options.
 
 ### Troubleshooting Connections to Open OnDemand
-A common issue that can occur is receiving an error that the Open OnDemand page cannot be reached. Sometimes this can indicate that the service is down, but often this is an issue with the the local browser cache. You can test this by opening a private browser window and seeing if [https://ood.hpc.nyu.edu](https://ood.hpc.nyu.edu) will load. If it does, try deleting the cache for [https://ood.hpc.nyu.edu](https://ood.hpc.nyu.edu) in your browser history to resolve this issue.
+A common issue that can occur is receiving an error that the Open OnDemand page cannot be reached. Sometimes this can indicate that the service is down, but often this is an issue with the the local browser cache. You can test this by opening a private browser window and seeing if [https://ood.torch.hpc.nyu.edu](https://ood.torch.hpc.nyu.edu) will load. If it does, try deleting the cache for [https://ood.torch.hpc.nyu.edu](https://ood.torch.hpc.nyu.edu) in your browser history to resolve this issue.
 
 In Chrome, this can be done by navigating to this page in your settings:
 
-[chrome://settings/content/all?searchSubpage=ood.hpc.nyu.edu&search=site+data](chrome://settings/content/all?searchSubpage=ood.hpc.nyu.edu&search=site+data)
+[chrome://settings/content/all?searchSubpage=ood.torch.hpc.nyu.edu&search=site+data](chrome://settings/content/all?searchSubpage=ood.torch.hpc.nyu.edu&search=site+data)
 
 The link above will automatically search for the Open OnDemand site data and cookies. You can then simply click on the trashcan icon to delete the site cache.
 
-Once done, try navigating again to [https://ood.torch.hpc.nyu.edu](https://ood.hpc.nyu.edu) and the site should load. For other issues please email [hpc@nyu.edu](mailto:hpc@nyu.edu).
+Once done, try navigating again to [https://ood.torch.hpc.nyu.edu](https://ood.torch.hpc.nyu.edu) and the site should load. For other issues please email [hpc@nyu.edu](mailto:hpc@nyu.edu).
 
 #### SSH Agents on Linux, macOS, and Windows
 Open your terminal application and check if an agent is running:
