modify note to tell users that they need an allocation to submit jobs

--- a/docs/hpc/01_getting_started/02_getting_and_renewing_an_account.mdx
+++ b/docs/hpc/01_getting_started/02_getting_and_renewing_an_account.mdx
@@ -18,12 +18,15 @@ This section deals with the eligibility for getting HPC accounts, the process to
 -   All **sponsored accounts** will be created for a period of 12 months, at which point a renewal process is required to continue to use the clusters
 -   Faculty, students and staff from the **NYU School of Medicine** require the sponsorship of an eligible NYU faculty member to access the NYU HPC clusters
 -   **Non-NYU Researchers** who are collaborating with NYU researchers must obtain an affiliate status before applying for an NYU HPC account
- 
+-   An HPC account gives you access to Torch, but an active allocation within the HPC projects management portal gives you access to a SLURM account which is needed to run jobs on Torch. More information on using the HPC project management portal can be found [here](./07_hpc_project_management_portal.mdx)
+
 :::
 
 ## Who is eligible for an NYU HPC account ?
 
 NYU HPC clusters and related resources are available to full-time NYU faculty and to all NYU staff and students with sponsorship from a full-time NYU faculty.
+
+
 
 
 ## Getting a new account on the NYU HPC clusters
