modify note to tell users that they need an allocation to submit jobs

--- a/docs/hpc/01_getting_started/03_walkthrough_request_hpc_account.mdx
+++ b/docs/hpc/01_getting_started/03_walkthrough_request_hpc_account.mdx
@@ -46,4 +46,7 @@ You need to be on the NYU VPN to perform this task!
 </Tabs>
 
 
+:::tip
+-   An HPC account gives you access to Torch, but an active allocation within the HPC projects management portal gives you access to a SLURM account which is needed to run jobs on Torch. More information on using the HPC project management portal can be found [here](./07_hpc_project_management_portal.mdx)
+:::
 
